--- a/WNKLab.Application.MVC/Web.config
+++ b/WNKLab.Application.MVC/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="WNK" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\WNK\WNK.Web\App_Data\Database.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
